fixed product overview covering the entire page and removed add to cart button on the admin side

--- a/hackathon_site/dashboard/frontend/src/components/inventory/ProductOverview/ProductOverview.module.scss
+++ b/hackathon_site/dashboard/frontend/src/components/inventory/ProductOverview/ProductOverview.module.scss
@@ -8,10 +8,14 @@
 
 .productOverview {
     height: 100%;
-    width: 100%;
+    width: 500px;
     @include flexPosition($jusCon: space-between, $alIte: flex-start, $dir: column);
 
     &Div {
+        width: 100%;
+    }
+
+    @include responsive(sm-down) {
         width: 100%;
     }
 }
